--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
   <head>
-    <link rel="stylesheet" href="index.css" />
+    <style>
+      body {
+        background: black;
+      }
+    </style>
   </head>
   
   <body>
