--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <html>
   <head>
-    <style>
-      body {
-        background: black;
-      }
-    </style>
+    <link rel="stylesheet" href="index.css" />
   </head>
   
   <body>
