--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
   <head>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="index.css">
   </head>
-  
+
   <body>
-    <h1>It's-a-me, Mario!</h1>
+    <h1 class="header">It's-a-me, Mario!</h1>
+    <button class="button"><a class="button-text">Mario is going to steal your liver in 3 days!</a></button>
   </body>
 </html>
