--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 
   <body>
     <h1 class="header">It's-a-me, Mario!</h1>
-    <button class="button"><a class="button-text">Mario is going to steal your liver in 3 days!</a></button>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+      <button class="button">
+        <text class="button-text">Mario is going to steal your liver in 3 days</text>
+      </button>
+    </a>
   </body>
 </html>
