--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 
   <body>
     <h1 class="header">It's-a-me, Mario!</h1>
+
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
       <button class="button">
         <text class="button-text">Mario is going to steal your liver in 3 days</text>
       </button>
     </a>
+
+    <img class="amogus" src="https://apkshki.com/storage/4102/icon_5f035443439c2_4102.png">
   </body>
 </html>
