--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       </button>
     </a>
 
-    <img class="amogus" src="https://apkshki.com/storage/4102/icon_5f035443439c2_4102.png">
+    <img class="amogus" src="https://cdn140.picsart.com/339412857064211.png">
     <img class="amoghost" src="https://i.pinimg.com/originals/97/a8/e9/97a8e961cf6822f718d060bda2bfb26a.png">
   </body>
 </html>
