--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
       <button class="button">
-        <text class="button-text">Mario is going to steal your liver in 3 days</text>
+        <text class="button-text">Mario is going to steal your liver in 3 days!</text>
       </button>
     </a>
 
