--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       </button>
     </a>
 
-    <img class="amogus" src="https://cdn140.picsart.com/339412857064211.png">
-    <img class="amoghost" src="https://i.pinimg.com/originals/97/a8/e9/97a8e961cf6822f718d060bda2bfb26a.png">
+    <img class="amogus" src="amogus.png">
+    <img class="amoghost" src="amoghost.png">
   </body>
 </html>
