--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       </button>
     </a>
 
-    <img class="amogus" src="amogus.png">
-    <img class="amoghost" src="amoghost.png">
+    <a href="https://youtube.com/watch?v=_Fd5HXM2WQM"><img class="amogus" src="amogus.png"></a>
+    <a href="https://youtube.com/watch?v=_Fd5HXM2WQM"><img class="amoghost" src="amoghost.png"></a>
   </body>
 </html>
