--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <a href="https://youtube.com/watch?v=wsR_ceYnrFA"><img class="amogus" src="amogus.png"></a>
     <a href="https://youtube.com/watch?v=_Fd5HXM2WQM"><img class="amoghost" src="amoghost.png"></a>
 
-    <img class="flying-amongi a" src="black_amoghost.png">
-    <img class="flying-amongi b" src="black_amoghost.png">
-    <img class="flying-amongi c" src="black_amoghost.png">
-    <img class="flying-amongi d" src="black_amoghost.png">
+    <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi a" src="black_amoghost.png"></a>
+    <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi b" src="black_amoghost.png"></a>
+    <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi c" src="black_amoghost.png"></a>
+    <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi d" src="black_amoghost.png"></a>
   </body>
 </html>
