--- a/mobile/index.html
+++ b/mobile/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="index.css">
+  </head>
 
+  <body>
+    <h1 class="header">It's-a-me, Mario!</h1>
+
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+      <button class="button">
+        <text class="button-text">Mario is going to steal your liver in 3 days!</text>
+      </button>
+    </a>
+
+    <a href="https://youtube.com/watch?v=wsR_ceYnrFA"><img class="amogus" src="amogus.png"></a>
+    <a href="https://youtube.com/watch?v=_Fd5HXM2WQM"><img class="amoghost" src="amoghost.png"></a>
+
+    <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi a" src="black_amoghost.png"></a>
+    <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi b" src="black_amoghost.png"></a>
+    <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi c" src="black_amoghost.png"></a>
+    <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi d" src="black_amoghost.png"></a>
+  </body>
+</html>
