--- a/mobile/index.html
+++ b/mobile/index.html
@@ -13,12 +13,12 @@
       </button>
     </a>
 
-    <a href="https://youtube.com/watch?v=wsR_ceYnrFA"><img class="amogus" src="amogus.png"></a>
-    <a href="https://youtube.com/watch?v=_Fd5HXM2WQM"><img class="amoghost" src="amoghost.png"></a>
+    <a href="https://youtube.com/watch?v=wsR_ceYnrFA"><img class="amogus" src="../assets/amogus.png"></a>
+    <a href="https://youtube.com/watch?v=_Fd5HXM2WQM"><img class="amoghost" src="../assets/amoghost.png"></a>
 
-    <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi a" src="black_amoghost.png"></a>
-    <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi b" src="black_amoghost.png"></a>
-    <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi c" src="black_amoghost.png"></a>
-    <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi d" src="black_amoghost.png"></a>
+    <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi a" src="../assets/black_amoghost.png"></a>
+    <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi b" src="../assets/black_amoghost.png"></a>
+    <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi c" src="../assets/black_amoghost.png"></a>
+    <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi d" src="../assets/black_amoghost.png"></a>
   </body>
 </html>
