--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       </button>
     </a>
 
+    <a><img class="osu" src="assets/osu.png"></a>
+
     <a href="https://youtube.com/watch?v=wsR_ceYnrFA"><img class="amogus" src="assets/amogus.png"></a>
     <a href="https://youtube.com/watch?v=_Fd5HXM2WQM"><img class="amoghost" src="assets/amoghost.png"></a>
 
