--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
     <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi b" src="assets/black_amoghost.png"></a>
     <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi c" src="assets/black_amoghost.png"></a>
     <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi d" src="assets/black_amoghost.png"></a>
+
+    <img class="shh" src="assets/shh.png">
   </body>
 </html>
