--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </a>
 
     <a href="https://www.youtube.com/watch?v=L3-IiOSTZFU"><img class="osu" src="assets/osu.png"></a>
+    <a href="https://www.google.com/search?q=How+to+treat+broken+toe%3F"><img class="broken-toe" src="assets/broken_toe.png"></a>
 
     <a href="https://youtube.com/watch?v=wsR_ceYnrFA"><img class="amogus" src="assets/amogus.png"></a>
     <a href="https://youtube.com/watch?v=_Fd5HXM2WQM"><img class="amoghost" src="assets/amoghost.png"></a>
