--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi c" src="assets/black_amoghost.png"></a>
     <a href="https://www.innersloth.com/games/among-us/"><img class="flying-amongi d" src="assets/black_amoghost.png"></a>
 
+    <a href="https://support.lenovo.com/ca/en/contact-us?linktrack=footer%3Asupport_contact%20us"><img class="infection" src="assets/infected_computer.png"></a>
+
     <img class="shh" src="assets/shh.png">
   </body>
 </html>
