--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
   <head>
     <link rel="stylesheet" href="index.css">
     <title>This is Mario!</title>
-    <script>
-      var audio = new Audio("assets/amogus.mp3");
-      audio.loop = true;
-      audio.play();
-    </script>
+    <audio src="MUSIC.mp3" autoplay loop></audio>
   </head>
 
   <body>
