--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="index.css">
     <title>This is Mario!</title>
-    <audio src="MUSIC.mp3" autoplay loop></audio>
+    <audio src="assets/amogus.mp3" autoplay loop></audio>
   </head>
 
   <body>
